--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.3",
-    "tailwind-merge": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "clsx": "^2.1.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "framer-motion": "^11.0.3",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
